--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
+@tailwind components;
+@tailwind base;
+@tailwind utilities;
 /* You can add global styles to this file, and also import other style files */
+
+@layer base {
+  html {
+    @apply bg-cyan-100;
+  }
+  a {
+    @apply underline;
+  }
+}
